--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,6 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1 th:text="'Bison Bank on ' + ${host}"></h1>
+<h1 th:text="'Bison Bank on ' + ${host}" style="color: blue"></h1>
 </body>
 </html>
