--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,8 @@
 <div class="container" style="margin-top: 60px">
 	<div class="row justify-content-md-center">
 		<object data="logo.svg" type="image/svg+xml" style="height: 200px"></object>
+	</div>
+	<div class="row justify-content-md-center">
 		<h1 th:text="'Bison Bank is on ' + ${host}" style="margin-top: 60px; color: whitesmoke;"></h1>
 	</div>
 </div>
